# fs-libs

./: .clippy.toml  .gitignore  Cargo.toml  audit.toml  deny.toml  package.toml
fs-bot/: Cargo.toml
fs-bot/src/: command.rs  context.rs  error.rs  lib.rs  registry.rs  response.rs  rights.rs  router.rs  trigger.rs
fs-bot/src/commands/: deploy.rs  health.rs  help.rs  mod.rs  ping.rs  status.rs
fs-bridge/: Cargo.toml
fs-bridge-sdk/: Cargo.toml  README.md
fs-bridge-sdk/src/: bridge.rs  http.rs  lib.rs  registry.rs
fs-bridge/src/: catalog.rs  dispatcher.rs  error.rs  executor.rs  lib.rs
fs-bus/: Cargo.toml
fs-bus/src/: bridge.rs  buffer.rs  config.rs  error.rs  event.rs  lib.rs  message.rs  message_bus.rs  router.rs  standing_order.rs  subscription.rs  topic.rs  transform.rs
fs-channel/: Cargo.toml
fs-channel/src/: channel.rs  error.rs  lib.rs  message.rs
fs-channel/src/matrix/: config.rs  mod.rs
fs-channel/src/telegram/: config.rs  mod.rs
fs-config/: Cargo.toml  README.md
fs-config/fuzz/: Cargo.toml
fs-config/fuzz/fuzz_targets/: fuzz_parse_str_generic.rs  fuzz_parse_toml_value.rs
fs-config/src/: lib.rs  loader.rs  repair.rs  schema.rs  validator.rs
fs-container/: Cargo.toml  README.md
fs-container/src/: quadlet.rs  service.rs  systemctl.rs
fs-core/: Cargo.toml  README.md
fs-core/src/: action.rs  error.rs  lib.rs  manager.rs  manifest.rs  registry.rs  repository.rs  store.rs
fs-crypto/: Cargo.toml  README.md
fs-crypto/src/: age_crypto.rs  base64url.rs  hmac_provider.rs  keygen.rs  lib.rs  mtls.rs  provider.rs  signing.rs  tokens.rs
fs-db/: Cargo.toml  README.md
fs-db/src/: connection.rs  entity.rs  lib.rs  manager.rs  migration.rs  repository.rs  write_buffer.rs
fs-db/src/entities/: installed_package.rs  mod.rs  sync_state.rs
fs-error/: Cargo.toml  README.md
fs-error/src/: error_trait.rs  lib.rs  repair.rs  severity.rs  validation.rs
fs-federation/: Cargo.toml  README.md
fs-federation/src/: lib.rs  well_known.rs
fs-federation/src/activitypub/: mod.rs
fs-federation/src/oidc/: mod.rs
fs-federation/src/scim/: mod.rs
fs-federation/src/webfinger/: mod.rs
fs-i18n/: Cargo.toml  README.md  languages.toml  sync_snippets.py
fs-i18n/snippets/am/: actions.toml  confirmations.toml  errors.toml  labels.toml  notifications.toml  nouns.toml  time.toml  validation.toml
fs-i18n/snippets/ar/: confirmations.toml  errors.toml  help.toml  notifications.toml  nouns.toml  status.toml  time.toml  validation.toml
fs-i18n/snippets/be/: actions.toml  confirmations.toml  help.toml  nouns.toml  phrases.toml  status.toml
fs-i18n/snippets/bg/: labels.toml  phrases.toml  status.toml  validation.toml
fs-i18n/snippets/bn/: actions.toml  confirmations.toml  errors.toml  labels.toml  notifications.toml  phrases.toml
fs-i18n/snippets/cs/: actions.toml  help.toml  nouns.toml  phrases.toml  time.toml
fs-i18n/snippets/da/: confirmations.toml  errors.toml  labels.toml  validation.toml
fs-i18n/snippets/de/: actions.toml  help.toml  phrases.toml  time.toml  validation.toml
fs-i18n/snippets/el/: actions.toml  confirmations.toml  notifications.toml  phrases.toml  status.toml
fs-i18n/snippets/en/: actions.toml  help.toml  meta.toml  notifications.toml  validation.toml
fs-i18n/snippets/es/: confirmations.toml  errors.toml  labels.toml  phrases.toml  status.toml
fs-i18n/snippets/et/: errors.toml  notifications.toml  phrases.toml  status.toml
fs-i18n/snippets/fa/: confirmations.toml  errors.toml  labels.toml  notifications.toml  status.toml  validation.toml
fs-i18n/snippets/fi/: actions.toml  confirmations.toml  errors.toml  help.toml  labels.toml  notifications.toml  phrases.toml  time.toml
fs-i18n/snippets/fr/: nouns.toml  phrases.toml  time.toml
fs-i18n/src/: bundle.rs  i18n.rs  languages.rs  lib.rs  locale.rs  macros.rs  provider.rs  snippets.rs  tools.rs
fs-inventory/: Cargo.toml
fs-inventory/src/: lib.rs  models.rs  repo.rs
fs-pkg/: .setup-state.toml  Cargo.toml
fs-pkg/src/: capability_match.rs  channel.rs  dependency_resolver.rs  event.rs  install_paths.rs  installer.rs  installer_registry.rs  lib.rs  manageable.rs  manifest.rs  oci.rs  package.rs  scaling.rs  setup_contributor.rs  setup_flow.rs  setup_step.rs  signing.rs  updater.rs  variable_roles.rs  variable_types.rs  versioning.rs
fs-plugin-runtime/: Cargo.toml  README.md
fs-plugin-runtime/src/: handle.rs  lib.rs  process_runner.rs  runtime.rs
fs-plugin-sdk/: Cargo.toml  README.md
fs-plugin-sdk/src/: command.rs  context.rs  entry.rs  lib.rs  macros.rs  plugin_impl.rs  response.rs  router.rs  traits.rs
fs-plugin-sdk/wit/: host-fs.wit  plugin.wit
fs-render/: Cargo.toml
fs-render/src/: lib.rs
fs-store/: Cargo.toml  README.md
fs-store/src/: catalog.rs  client.rs  disk_cache.rs  lib.rs  manifest.rs  permissions.rs  search.rs
fs-sync/: Cargo.toml  README.md
fs-sync/src/: lib.rs  transport.rs
fs-sysinfo/: Cargo.toml
fs-sysinfo/src/: alert.rs  cache.rs  disk.rs  features.rs  lib.rs  mem.rs  os.rs  smart.rs  thermal.rs
fs-theme/: Cargo.toml  README.md
fs-theme/assets/: animations.css  glass.css
fs-theme/src/: engine.rs  lib.rs  palette.rs  provider.rs  registry.rs  store.rs  theme.rs  types.rs
fs-types/: Cargo.toml  README.md
fs-types/src/: capability.rs  events.rs  host.rs  label.rs  lib.rs  module.rs  permission.rs  project.rs  requirement.rs  resource.rs  type_system.rs
fs-types/src/tags/: api.rs  (+3 more)
fs-ui/: Cargo.toml
fs-ui/src/: lib.rs
fsn-auth/: Cargo.toml  README.md
fsn-auth/src/: claims.rs  jwt.rs  lib.rs  oauth2.rs  permission.rs  rbac.rs
fsn-bot/: Cargo.toml
fsn-bot/src/: command.rs  context.rs  error.rs  lib.rs  registry.rs  router.rs
fsn-bridge/: Cargo.toml
fsn-bridge-sdk/: Cargo.toml  README.md
fsn-bridge-sdk/src/: bridge.rs  http.rs  lib.rs  registry.rs
fsn-bridge/src/: catalog.rs  dispatcher.rs  executor.rs  lib.rs
fsn-bus/: Cargo.toml
fsn-bus/src/: bridge.rs  buffer.rs  config.rs  error.rs  event.rs  lib.rs  message.rs  message_bus.rs  router.rs  standing_order.rs  subscription.rs  topic.rs  transform.rs
(+835 files in other folders)
