[workspace]
members = [
    # Core
    "fs-types", "fs-error",
    "fs-core", "fs-crypto", "fs-health",
    "fs-sync",
    "fs-template",
    "fs-sysinfo",
    # UI
    "fs-theme", "fs-help", "fs-i18n",
    "fs-render", "fs-components", "fs-ui",
    # Ext
    "fs-pkg",
    "fs-plugin-sdk", "fs-plugin-runtime",
    "fs-container",
    # Net
    "fs-channel", "fs-llm", "fs-bot",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-libs"

# ── Shared dependency versions ─────────────────────────────────────────────────
[workspace.dependencies]
# Internal
fs-types          = { path = "fs-types" }
fs-error          = { path = "fs-error" }
fs-config         = { path = "../fs-config" }
fs-core           = { path = "fs-core" }
fs-crypto         = { path = "fs-crypto" }
fs-health         = { path = "fs-health" }
fs-db             = { path = "../fs-db" }
fs-bus            = { path = "../fs-bus" }
fs-sync           = { path = "fs-sync" }
fs-template       = { path = "fs-template" }
fs-inventory      = { path = "../fs-inventory" }
fs-sysinfo        = { path = "fs-sysinfo" }
fs-theme          = { path = "fs-theme" }
fs-help           = { path = "fs-help" }
fs-i18n           = { path = "fs-i18n" }
fs-render         = { path = "fs-render" }
fs-components     = { path = "fs-components" }
fs-ui             = { path = "fs-ui" }
fs-pkg            = { path = "fs-pkg" }
fs-store          = { path = "../fs-store/crates/fs-store" }
fs-plugin-sdk     = { path = "fs-plugin-sdk" }
fs-plugin-runtime = { path = "fs-plugin-runtime" }
fs-container      = { path = "fs-container" }
fs-auth           = { path = "../fs-auth" }
fs-federation     = { path = "../fs-federation" }
fs-channel        = { path = "fs-channel" }
fs-llm            = { path = "fs-llm" }
fs-bot            = { path = "fs-bot" }

# Serde
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1" }
toml        = { version = "1", features = ["preserve_order"] }

# Error handling
anyhow    = { version = "1" }
thiserror = { version = "2" }

# Async
tokio        = { version = "1", features = ["full"] }
async-trait  = { version = "0.1" }
futures-util = { version = "0.3" }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls", "form", "query"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }

# Database
sea-orm = { version = "=2.0.0-rc.37", default-features = false, features = ["macros"] }

# UI (Dioxus)
dioxus = { version = "0.7.3", default-features = false, features = ["macro", "html", "signals", "hooks", "launch"] }

# i18n
fluent-bundle = { version = "0.16" }
unic-langid   = { version = "0.9", features = ["macros"] }

# CRDT
automerge = { version = "0.7" }

# Template
tera     = { version = "1" }
indexmap = { version = "2" }

# Container API
bollard = { version = "0.20" }

# WASM runtime
wasmtime      = { version = "43", features = ["cranelift"] }
wasmtime-wasi = { version = "43" }

# ActivityPub
activitypub_federation = { version = "0.6", default-features = false }

# JWT + OAuth2
jsonwebtoken = { version = "10" }
oauth2       = { version = "5" }

# Messaging SDKs
matrix-sdk = { version = "0.16", default-features = false, features = ["rustls-tls"] }
teloxide   = { version = "0.17", default-features = false, features = ["macros"] }

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }

# Retry
backon = { version = "1", features = ["tokio-sleep"] }

# Logging
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url    = { version = "2" }
