[package]
name        = "fs-bridge-sdk"
description = "Bridge interface traits for FreeSynergy service connectors"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fs-error  = { workspace = true }
serde      = { workspace = true }
reqwest    = { workspace = true }
