[package]
name        = "fs-bridge"
description = "Dynamic bridge executor — maps standardized role API calls to concrete service APIs via HTTP"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
fs-types     = { workspace = true }
fs-inventory = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
reqwest       = { workspace = true }
