[package]
name        = "fs-bus"
description = "Async event bus with topic routing, retry, and Tera transforms for FreeSynergy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default         = []
tera-transform  = ["dep:tera", "dep:fs-template"]
bridge          = ["dep:reqwest"]

[dependencies]
fs-types    = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
backon      = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }

# Optional — bus-to-bus bridge (HTTP forwarding)
reqwest      = { workspace = true, optional = true }

# Optional — tera-transform feature
tera         = { workspace = true, optional = true }
fs-template = { workspace = true, optional = true }

[package.metadata.cargo-machete]
ignored = ["fs-template"]  # optional dep activated only by tera-transform feature
