[package]
name        = "fs-container"
description = "Podman Quadlet management for FreeSynergy — no socket, no bollard"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fs-error  = { workspace = true }
fs-types  = { workspace = true }
serde  = { workspace = true }
tokio  = { workspace = true }
tracing    = { workspace = true }
