[package]
name        = "fs-core"
description = "Abstract, renderer-independent form types for FreeSynergy.UI"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
