[package]
name        = "fs-crypto"
description = "Encryption and key management for FreeSynergy (age, mTLS, keygen)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default = []
age     = ["dep:age"]
mtls    = ["dep:rcgen", "dep:time"]
keygen  = ["dep:rand", "dep:pbkdf2", "dep:sha2", "dep:hex"]
tokens  = ["dep:rand", "dep:hex"]
signing = ["dep:ed25519-dalek", "dep:rand_core", "dep:hex", "dep:sha2"]

[dependencies]
fs-error = { workspace = true }
serde     = { workspace = true }

[dependencies.age]
version = "0.11"
features = ["armor"]
optional = true

[dependencies.rcgen]
version = "0.14"
features = ["x509-parser"]
optional = true

[dependencies.time]
version = "0.3"
features = ["std"]
optional = true

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.pbkdf2]
version = "0.12"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.hex]
version = "0.4"
optional = true

[dependencies.rand_core]
version = "0.6"
features = ["getrandom"]
optional = true

[dependencies.ed25519-dalek]
version = "2"
features = ["serde", "rand_core"]
optional = true
