[package]
name        = "fs-error"
description = "Error handling, Repairable trait, and validation types for FreeSynergy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
