[package]
name        = "fs-federation"
description = "OIDC, SCIM 2.0, and ActivityPub federation for FreeSynergy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default      = []
oidc         = ["dep:reqwest", "dep:tokio"]
scim         = ["dep:reqwest", "dep:tokio"]
activitypub  = ["dep:activitypub_federation", "dep:url"]
webfinger    = ["dep:reqwest", "dep:tokio"]

[dependencies]
fs-error  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[dependencies.reqwest]
workspace = true
optional  = true

[dependencies.tokio]
workspace = true
optional  = true

[dependencies.url]
workspace = true
optional  = true

[dependencies.activitypub_federation]
workspace = true
optional  = true

[dependencies.urlencoding]
version  = "2"

[package.metadata.cargo-machete]
# tokio is optional, pulled in by oidc/scim/webfinger features via reqwest
ignored = ["tokio"]
