[package]
name        = "fs-i18n"
description = "Fluent-based i18n system for FreeSynergy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fs-error     = { workspace = true }
fluent-bundle = { workspace = true }
unic-langid   = { workspace = true }
toml          = { workspace = true }
serde         = { workspace = true }

[features]
dioxus = ["dep:dioxus-core"]

[dependencies.dioxus-core]
version = "0.7"
optional = true
