[package]
name        = "fs-pkg"
description = "Package manager for FreeSynergy — OCI manifests, install lifecycle, event hooks"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default = []
# OCI registry pull (requires reqwest)
oci     = ["dep:reqwest", "dep:tokio", "dep:tracing"]
# Package signature verification via Ed25519
signing = ["dep:fs-crypto", "fs-crypto/signing"]

[dependencies]
fs-error  = { workspace = true }
fs-types  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }

[dependencies.fs-crypto]
workspace = true
optional  = true

[dependencies.reqwest]
workspace = true
optional  = true

[dependencies.tokio]
workspace = true
optional  = true

[dependencies.tracing]
workspace = true
optional  = true

[dev-dependencies]
tempfile = "3"
tokio    = { workspace = true }
