[package]
name        = "fs-pkg"
description = "Package manager for FreeSynergy — OCI manifests, install lifecycle, event hooks"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default = []
# OCI registry pull (requires reqwest + tokio)
oci      = ["dep:reqwest", "dep:tokio", "dep:tracing"]
# GitHub Releases download with SHA256 verification (blocking HTTP)
download = ["dep:reqwest", "reqwest/blocking", "dep:sha2", "dep:hex"]
# Package signature verification via Ed25519
signing  = ["dep:fs-crypto", "fs-crypto/signing"]

[dependencies]
fs-error  = { workspace = true }
fs-types  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }

[dependencies.fs-crypto]
workspace = true
optional  = true

[dependencies.reqwest]
workspace = true
optional  = true

[dependencies.tokio]
workspace = true
optional  = true

[dependencies.tracing]
workspace = true
optional  = true

[dependencies.sha2]
version  = "0.10"
optional = true

[dependencies.hex]
version  = "0.4"
optional = true

[dev-dependencies]
tempfile = "3"
tokio    = { workspace = true }
