[package]
name        = "fs-plugin-runtime"
description = "WASM plugin host runtime for FreeSynergy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default = []
wasm    = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
fs-error      = { workspace = true }
fs-plugin-sdk = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }

[dependencies.wasmtime]
workspace = true
optional  = true

[dependencies.wasmtime-wasi]
workspace = true
optional  = true
