[package]
name        = "fs-render"
description = "FreeSynergy render abstraction — ViewRenderer trait for Desktop and Web (Dioxus)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[features]
default = []
# Activates DioxusRenderer
dioxus  = ["dep:dioxus"]

[dependencies]
fs-theme  = { workspace = true }
fs-config = { workspace = true }
dioxus     = { workspace = true, optional = true }
