[package]
name        = "fs-store"
description = "FreeSynergy Store SDK — generic catalog client (Manifest trait, Catalog, StoreClient)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
toml       = { workspace = true }
