[package]
name = "fs-sync"
description = "CRDT sync layer for FreeSynergy — Automerge wrapper"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default = []
ws      = ["dep:tokio-tungstenite", "dep:tokio", "dep:futures-util"]

[dependencies]
fs-error  = { workspace = true }
automerge  = "0.7"
serde      = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dependencies.tokio-tungstenite]
version  = "0.29"
features = ["native-tls"]
optional = true

[dependencies.tokio]
workspace = true
optional  = true

[dependencies.futures-util]
workspace = true
optional  = true


