[package]
name        = "fs-sysinfo"
description = "System information detection and alerting for FreeSynergy.Node"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default = []
# Enable smartctl-based SMART disk health queries.
smart = ["dep:serde_json"]

[dependencies]
serde       = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }

sysinfo     = "0.38"
serde_json  = { workspace = true, optional = true }
