[package]
name        = "fs-theme"
description = "Theme system for FreeSynergy (theme.toml → TUI palette + CSS variables)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fs-error = { workspace = true }
serde     = { workspace = true }
toml      = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
