[package]
name        = "fs-types"
description = "Shared types and traits for the FreeSynergy ecosystem"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
