[package]
name        = "fs-ui"
description = "Dioxus UI component library for FreeSynergy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
dioxus = { workspace = true }

[features]
default = []
tui = []
