[package]
name        = "fsn-auth"
description = "Permission system, JWT claims, and JWT signing/verification for FreeSynergy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default = []
jwt    = ["dep:jsonwebtoken"]
oauth2 = ["dep:oauth2", "dep:reqwest", "dep:tokio"]

[dependencies]
fsn-error = { workspace = true }
serde     = { workspace = true }

[dependencies.jsonwebtoken]
workspace = true
optional  = true

[dependencies.oauth2]
workspace = true
optional  = true

[dependencies.reqwest]
workspace = true
optional  = true

[dependencies.tokio]
workspace = true
optional  = true
