[package]
name        = "fsn-bot"
description = "Bot command framework with registry and standard commands for FreeSynergy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default = []
llm     = ["dep:fsn-llm"]

[dependencies]
fsn-auth    = { workspace = true }
fsn-bus     = { workspace = true }
fsn-channel = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }

# Optional — LLM-powered commands
fsn-llm = { workspace = true, optional = true }
