[package]
name        = "fsn-bridge-sdk"
description = "Bridge interface traits for FreeSynergy service connectors"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
fsn-error  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
