[package]
name        = "fsn-bridge"
description = "Dynamic bridge executor — maps standardized role API calls to concrete service APIs via HTTP"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[dependencies]
fsn-types     = { workspace = true }
fsn-inventory = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
async-trait   = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
reqwest       = { workspace = true }
