[package]
name        = "fsn-bus"
description = "Async event bus with topic routing, retry, and Tera transforms for FreeSynergy"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[features]
default         = []
tera-transform  = ["dep:tera", "dep:fsn-template"]
bridge          = ["dep:reqwest"]

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
backon      = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }

# Optional — bus-to-bus bridge (HTTP forwarding)
reqwest      = { workspace = true, optional = true }

# Optional — tera-transform feature
tera         = { workspace = true, optional = true }
fsn-template = { workspace = true, optional = true }
